2111
Also using latest nightly build get:
```scala
bug.scala:5: error: unreachable code
      case a2: Tuple2[Float, Int] => print("Float, Int: ", a2)
                                          ^
```

with:
```scala
object Bug {
  def f(a: Any) = {
    a match {
      case a1: Tuple2[Int, Int] => print("Int, Int: ", a1)
      case a2: Tuple2[Float, Int] => print("Float, Int: ", a2)
      case _ =>
      }
    }
  }
```
